# 3DApp

./: .gitignore  BuildVS.bat  BuildVS2015.bat  CMakeLists.txt
lib/: CMakeLists.txt
lib/dependencies/dds/: DDS.h
lib/dependencies/png/debug/: libpng16.lib
lib/include/: 3DAppLib.h  3DEngine.h  AABB.h  Array.h  Atomsphere.h  Buffer.h  Camera.h  CameraController.h  CustomGeometryNode.h  Display.h  File.h  FirstPersonCameraController.h  FreelistAlloc.h  Global.h  HardwareBuffer.h  Hashmap.h  InputHandler.h  InputListener.h  Job.h  JobSystem.h  LinkList.h  Log.h  Map.h  Material.h  Matrix.h  Memory.h  OrbitCameraController.h  PixelFormatUtil.h  Plane.h  Platform.h  Pool.h  PreHeader.h  Prereq.h  Quat.h  ReferencedObject.h  RenderBackend.h  RenderItem.h  RenderNode.h  RenderStage.h  RendererTypes.h  (+12 more)
lib/src/: 3DEngine.cpp  3DEngineNode.cpp  Atomsphere.cpp  CMakeLists.txt  Camera.cpp  CustomGeometryNode.cpp  File.cpp  FirstPersonCameraController.cpp  FreelistAlloc.cpp  Global.cpp  HardwareBuffer.cpp  Hashmap.cpp  InputListener.cpp  JobSystem.cpp  Log.cpp  Material.cpp  MaterialParser.cpp  Matrix.cpp  Memory.cpp  OrbitCameraController.cpp  PixelFormatUtil.cpp  Pool.cpp  RenderNode.cpp  RendererStableHeader.h  SceneClipping.cpp  ScriptParser.cpp  Shader.cpp  Stack.cpp  Str.cpp  Texture.cpp  TextureReader.cpp  Timer.cpp  Untitled-1.txt  Untitled-2.txt  Worker.cpp
lib/src/Backend/D3D11/: HardwareBufferDX11.cpp  HardwareBufferDX11.h  RenderBackendDX11.cpp  RenderBackendDX11.h  ShaderDX11.cpp  ShaderDX11.h  TextureDX11.cpp  TextureDX11.h
lib/src/Backend/D3D9/: AtomsphereProcessing.cpp  AtomsphereRendererDX9.cpp  AtomsphereRendererDX9.h  AtomsphereShader.cpp  GPUResource.h  HardwareBufferDX9.cpp  HardwareBufferDX9.h  RenderBackendDX9.cpp  RenderBackendDX9.h  RenderStageDX9.cpp  RenderStageDX9.h  RenderStageDX9_Opaque.cpp  RenderStageDX9_Opaque.h  RenderStageDX9_SceneDepth.cpp  RenderStageDX9_SceneDepth.h  RenderStageDX9_ShadowDepth.cpp  RenderStageDX9_ShadowDepth.h  RenderStageDX9_ShadowMask.cpp  RenderStageDX9_ShadowMask.h  RenderStageDX9_Sky.cpp  RenderStageDX9_Sky.h  RenderStageDX9_Translucent.cpp  RenderStageDX9_Translucent.h  ShaderDX9.cpp  ShaderDX9.h  TextureDX9.cpp  TextureDX9.h
lib/src/Backend/DInput/: InputListenerDInput.cpp  InputListenerDInput.h
lib/src/Windows/: Display_Windows.cpp  Display_Windows.h  IDisplay_Windows.h  Platform_Windows.cpp  Platform_Windows.h
rc/: Untitled-1.txt
rc/Mtl/: NoIllum.mtl  NoIllumColor.mtl
rc/ShaderSource/D3D9/: Common.h  FullScreenQuad.hlsl  Irradiance.hlsl  NoIllum.hlsl  PixelLib.h  SceneDepth.hlsl  Shaders.idx  ShadingModel.h  SingleScattering.hlsl  Transmittance.hlsl  VertexLib.h
src/: 3DApp.h  CMakeLists.txt  Test.cpp  main.cpp
tools/: CMakeLists.txt
tools/ShaderPrecacher/: CMakeLists.txt  ShaderPrecacher.cpp  ShaderPrecacher.h  main.cpp
