if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
    add_definitions("-DTRACE_MEMORY_ALLOCATION" "-DSHADER_DEBUGGING")
    link_libraries(${PROJECT_SOURCE_DIR}/lib/dependencies/d3d/d3dx9d.lib)
else ()
    link_libraries(${PROJECT_SOURCE_DIR}/lib/dependencies/d3d/d3dx9.lib)
endif ()
include_directories("${PROJECT_SOURCE_DIR}/lib/dependencies/d3d")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/src)
add_executable(ShaderPrecacher main.cpp ShaderPrecacher.cpp)
target_link_libraries(ShaderPrecacher ${PROJECT_NAME}_lib)